--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <!-- Created By CodingNepal -->
 <html lang="en">
 <head>
-<meta property="og:url" content="http://harihar.ga"/>
-		<meta property="og:site_name" content="I am harihar nautiyal"/>
-		<meta property="og:title" content="harihar nautiyal"/>
-		<meta property="og:description" content="A website for classmate for their work and games.|by harihar"/>
-		<meta property="og:type" content="website"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website|harihar nautiyal</title>
-	<link rel="icon" type="image/x-icon" href="icon.ico">
-<link rel="shortcuticon" type="image/x-icon" href="icon.ico">
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -299,6 +292,15 @@
     <footer>
         <span>Created By <a href="https://www.codingnepalweb.com">Harihar Nautiyal</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
+    <form action="welcome.php">
+      
+      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+<label for="vehicle1"> I have a bike</label><br>
+<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+<label for="vehicle2"> I have a car</label><br>
+<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+<label for="vehicle3"> I have a boat</label><br>
+    </form>
   <script src="js/loader.js"></script>
     <script src="script.js"></script>
 </body>
