--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Harihar</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -292,15 +292,6 @@
     <footer>
         <span>Created By <a href="https://www.codingnepalweb.com">Harihar Nautiyal</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
-    <form action="welcome.php">
-      
-      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-<label for="vehicle1"> I have a bike</label><br>
-<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-<label for="vehicle2"> I have a car</label><br>
-<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-<label for="vehicle3"> I have a boat</label><br>
-    </form>
   <script src="js/loader.js"></script>
     <script src="script.js"></script>
 </body>
