--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Harihar and I'm a <span class="typing-2"></span></div>
-                    <p>I am website Designer ,My age is 13 years and I also learned how to hack games and apps. I make an website in with you can request or look on classwork.So,this is the button for classdrive mine and yours website.</p>
+                    <p>I am website Designer ,My age is 13 years and I also know how to encode and re-design games and apps. I make an website in with you can request or look on classwork.So,this is the button for classdrive mine and yours website.</p>
                     <a href="https://classdrive.netlify.app/">Classdrive</a>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>I can make Hack of games or app for you.</p>
+                        <p>I can make an encoded app for you of games or app.</p>
                     </div>
                 </div>
                </div>
