--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <div class="text">I'm Harihar and I'm a <span class="typing-2"></span></div>
                     <p>I am website Designer ,My age is 13 years and I also know how to encode and re-design games and apps. I make an website in with you can request or look on classwork.So,this is the button for classdrive mine and yours website.</p>
                     <a href="https://classdrive.netlify.app/">Classdrive</a>
+                    <a href="sms:(+91)(9410702849)"> Get verify </a>
                 </div>
             </div>
         </div>
