--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="mailto:shashinautiyal@gmail.com" method="post" name="emailform">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
