--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="mailto:shashinautiyal1985@gmail.com" method="post" name="emailform">
+                    <form action="mailto:shashinautiyal1985@gmail.com" method="post" name="emailform"
+                    enctype=”multipart/form-data”
+
+>
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
