--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="mailto:shashinautiyal1985@gmail.com" method="post" name="emailform"
-                    enctype=”multipart/form-data”
+                    <form action="https://formspree.io/f/mqkndvzw" method="post"
+                    
 
 >
                         <div class="fields">
