--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="https://formspree.io/f/mqkndvzw" method="post"
+                    <form action="https://formspree.io/f/mqkndvzw" method="post">
                     
 
->
+
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
