--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             <input type="text" placeholder="Subject" name="text"required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="message" required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
