--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="https://formspree.io/f/mqkndvzw" method="post" name="harihar">
+                    <form action="https://formsubmit.co/shashinautiyal@gmail.com" method="post" name="harihar">
                     
 
 
