--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Hari<span>har</span></a></div>
+            <div class="logo"><a href="#">Harihar<span>.ga</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -92,14 +92,14 @@
                     <div class="box">
                         <a href="https://www.mediafire.com/file/t520pmoajc2ef5e/Minecraft_%2528v1.18.30_v1.18.30.04_unk_FW_64bit_os100_ok14%2529-user_hidden.bfi.ipa/file"><i class="fa fa-download"></i></a>
                         <div class="text">Minecraft(Iphone)</div>
-                        <p>click for download.(server,ipaddress(scba.aternos.me),port(50944)</p>
+                        <p>click for download.address(scba.aternos.me),port(50944)</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://www.mediafire.com/file/ifowk64nsxliqjr/minecraft-1-18-30.apk/file"><i class="fas fa-download"></i></a>
                         <div class="text">Minecraft(android)</div>
-                        <p>click for download.(server,ipaddress(scba.aternos.me),port(50944)</p>
+                        <p>click for download.(address(scba.aternos.me),port(50944)</p>
                     </div>
                 </div>
                 <div class="card">
