--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Harihar Nautiyal</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#about">Hire me</a>
+                <a href="https//:gamezoneharihar.netlify.app">Gamezone</a>
             </div>
         </div>
     </section>
@@ -77,7 +77,7 @@
                 <div class="column right">
                     <div class="text">I'm Harihar and I'm a <span class="typing-2"></span></div>
                     <p>I am website Designer ,My age is 13 years and I also learned how to hack games and apps. I make an website in with you can request or look on classwork.So,this is the button for classdrive mine and yours website.</p>
-                    <a href="https://classdrive.netlify.app">Classdrive</a>
+                    <a href="https://Gamezoneharihar.netlify.app">GameZone</a>
                 </div>
             </div>
         </div>
