--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
       <h2 class="heelo">Join Group</h2>
     </div>
     <div class="modal-body">
-      <div class="down1"><p>Whatsapp group <button class="kol">Join</button></p></div>
+      <div class="down1"><p>Whatsapp group <a href="button class="kol">Join</button>"><button class="kol">Join</button></a></p></div>
       <center><div class="down"><p>Telegram group <button class="kol">Join</button></p></div></center>
-	  <center><div class="down"><p>Instagram group <button class="kol">Join</button></p></div></center>
+	  <center><div class="down"><p>Instagram group <A HREF=""><button class="kol">Join</button></A></p></div></center>
     </div>
     <div class="modal-footer">
       <h3 class="heelo">Enjoy chatting </h3>
