--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <h2 class="heelo">Join Group</h2>
     </div>
     <div class="modal-body">
-      <div class="down1"><p>Whatsapp group <a href="button class="kol">Join</button>"><button class="kol">Join</button></a></p></div>
+      <div class="down1"><p>Whatsapp group <a href="https://chat.whatsapp.com/GcRG3qkOKjPKE3ymRCsn0b"><button class="kol">Join</button></a></p></div>
       <center><div class="down"><p>Telegram group <button class="kol">Join</button></p></div></center>
 	  <center><div class="down"><p>Instagram group <A HREF=""><button class="kol">Join</button></A></p></div></center>
     </div>
