--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <div class="text">I'm Harihar and I'm a <span class="typing-2"></span></div>
                     <p>I am website Designer ,My age is 13 years and I also learned how to hack games and apps. I make an website in with you can request or look on class.So,this is the button for classdrive mine and yours website.This is a free website for you so enjoy it </p>
                     <a href="https://gamezone.netlify.app">Gamezone</a>
+                     <a href="https://gamezone.netlify.app/holiday homework">Gamezone</a>
                 </div>
             </div>
         </div>
