--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<meta property="og:type" content="website"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Wallpoet&display=swap" rel="stylesheet">
     <title>Website|harihar nautiyal</title>
 	<link rel="icon" type="image/x-icon" href="icon.ico">
 <link rel="shortcuticon" type="image/x-icon" href="icon.ico">
