--- a/ffmax/follow/index3.html
+++ b/ffmax/follow/index3.html
@@ -77,8 +77,8 @@ body{
 <div class="B">
 <center><p class="type">If you know how to install it you can download?</p></center>
 <center>
-<button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-bottom:1em;">Download Apk</button>
-<button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-left:1em; margin-bottom:1em;">Download Xapk and zarchiver</button>
+<button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-bottom:1em;">1 day lef</button>
+<button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-left:1em; margin-bottom:1em;">1 day left</button>
 </center>
 </div>
 <div class="c">
