--- a/ffmax/index.html
+++ b/ffmax/index.html
@@ -32,7 +32,7 @@
   </div>
  <audio id="myAudio" loop>
   <source src="" type="audio/ogg">
-  <source src="image/play.mp3" type="audio/mpeg">
+  <source src="play.mp3" type="audio/mpeg">
 </audio>
 <div class="jar">
 <center><p class="type">If you are a friend You should know friend code.</p></center>
