--- a/ffmax/follow/index3.html
+++ b/ffmax/follow/index3.html
@@ -77,8 +77,8 @@ body{
 <div class="B">
 <center><p class="type">If you know how to install it you can download?</p></center>
 <center>
-	<a href="https://www.mediafire.com/file/hr5rviktnc8l6dl/Freefire_hack.zip/file"><button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-bottom:1em;">Download now </button></a>
-<button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-left:1em; margin-bottom:1em;">1 day left</button>
+	<a href="https://www.mediafire.com/file/2026iwm4ilwaz5h/HARIHAR.ga_FF_Hack.apk/file"><button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-bottom:1em;">Download Apk now </button></a>
+<a href="https://www.mediafire.com/file/2026iwm4ilwaz5h/HARIHAR.ga_FF_Hack.apk/file"><button  style="background: transparent; border:2px solid red; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: ; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px; margin-left:1em; margin-bottom:1em;">Apk with obb</button></a
 </center>
 </div>
 <div class="c">
