--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en">
 <head>
-
+<meta name="google-site-verification" content="pNjEsS8FzP1j3DqOCLUW91DzVv0F8q9Z5JPqpvShPaA" />
     <meta charset="UTF-8">
     
     <title>Harihar Creations</title>
