--- a/ffmax/follow/index3.html
+++ b/ffmax/follow/index3.html
@@ -2,7 +2,11 @@
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en">
 <head>
-
+	<meta property="og:url" content="https://harihar.ga"/>
+		<meta property="og:site_name" content="Hack Gallery by harihar"/>
+		<meta property="og:title" content="Hack Gallery by harihar"/>
+		<meta property="og:description" content="A website to download dreams."/>
+		<meta property="og:type" content="website"/>
     <meta charset="UTF-8">
     
     <title>Gaming zone| By harihar</title>
