--- a/ffmax/follow/index3.html
+++ b/ffmax/follow/index3.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 	<meta property="og:url" content="https://harihar.ga"/>
-		<meta property="og:site_name" content="Hack Gallery by harihar"/>
-		<meta property="og:title" content="Hack Gallery by harihar"/>
+		<meta property="og:site_name" content="Hack Gallery by harihar Harihar Creations"/>
+		<meta property="og:title" content="Hack Gallery by harihar Harihar Creations"/>
 		<meta property="og:description" content="A website to download dreams."/>
 		<meta property="og:type" content="website"/>
     <meta charset="UTF-8">
