--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
-<body>
+<body onload="myFunction()">
+    <div id="loading">
+
+
+<div class="loader">
+  <div class="inner one"></div>
+  <div class="inner two"></div>
+  <div class="inner three"></div>
+</div>
+  </div>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
