--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+<style>
+  
+  #loading{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+  background:#000;
+font-family: 'Hurricane', cursive;
+color:#000;
+font-size: 7vw;
+align-items: center;
+ justify-content:center;
+ display:flex;
+z-index: 99999;
+	
 
+}
+</style>
 </head>
 <body onload="myFunction()">
     <div id="loading">
